Change CLI alias from ewm to vlet
- Update package.json bin configuration
- Update README.md examples to use vlet instead of ewm

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "bin": {
     "ethers-wallet-manager": "./dist/cli.js",
-    "ewm": "./dist/cli.js"
+    "vlet": "./dist/cli.js"
   },
   "files": [
     "dist/**/*",
